# cookiecutter-djangoproject-hatch

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  Justfile  README.md  manage.py  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/: settings.py
